Update dependencies, nav offset fix, horizontal scrolling fix for mobile
Updated dependencies and migrated to Bootstrap 4 (no breaking changes -
just a plugin update), updated some dev dependencies and made a slight
change to gulpfile.js to accommodate the fix, changed the scroll spy
and scroll offset in scrolling-nav.js to make up for the larger height
of the navbar, and moved the -20px of margin from the charities class
to 768+px screen sizes only to fix horizontal scrolling on mobile

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -79,8 +79,13 @@ body {
 
 .charities {
   text-align: center;
-  margin-left: -20px;
-  margin-right: -20px;
+}
+
+@media (min-width: 768px) {
+  .charities {
+    margin-left: -20px;
+    margin-right: -20px;
+  }
 }
 
 .charity {
